# pyron

./: .gitignore  network.py  neural.py  pyproject.toml  regression.py  test.ipynb  tester.py  utils.py
